Practica04/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_variables lista_sentencias '}'

   2  lista_definiciones :
   3                     | lista_definiciones definicion

   4  definicion : definicion_funcion
   5             | definicion_variable

   6  lista_expresiones :
   7                    | lista_expresionesP

   8  lista_expresionesP : expresion
   9                     | lista_expresionesP ',' expresion

  10  expresion : CTE_ENTERA
  11            | CTE_REAL
  12            | CTE_CARACTER
  13            | ID
  14            | '(' expresion ')'
  15            | expresion '.' expresion
  16            | expresion '[' expresion ']'
  17            | '-' expresion
  18            | '!' expresion
  19            | expresion '*' expresion
  20            | expresion '/' expresion
  21            | expresion '%' expresion
  22            | expresion '+' expresion
  23            | expresion '-' expresion
  24            | expresion '>' expresion
  25            | expresion MAYOR_IGUAL expresion
  26            | expresion '<' expresion
  27            | expresion MENOR_IGUAL expresion
  28            | expresion DISTINTO expresion
  29            | expresion IGUAL_IGUAL expresion
  30            | expresion AND expresion
  31            | expresion OR expresion
  32            | tipo '(' expresion ')'
  33            | ID '(' lista_expresiones ')'

  34  lista_sentencias :
  35                   | lista_sentencias sentencia

  36  sentencia : sentencia_if
  37            | sentencia_else
  38            | sentencia_while
  39            | sentencia_write
  40            | sentencia_read
  41            | sentencia_asignacion
  42            | sentencia_return
  43            | sentencia_invocacion

  44  sentencia_asignacion : expresion '=' expresion ';'

  45  sentencia_if : IF expresion '{' lista_sentencias '}'

  46  sentencia_else : ELSE '{' lista_sentencias '}'

  47  sentencia_while : WHILE expresion '{' lista_sentencias '}'

  48  sentencia_write : WRITE '(' lista_expresiones ')' ';'

  49  sentencia_read : READ '(' lista_expresiones ')' ';'

  50  sentencia_return : RETURN expresion ';'

  51  sentencia_invocacion : ID '(' lista_expresiones ')' ';'

  52  lista_variables :
  53                  | lista_variables definicion_variable

  54  definicion_variable : VAR identificadores tipo ';'

  55  identificadores : ID
  56                  | identificadores ',' ID

  57  variable_struct : identificadores tipo ';'

  58  variables_struct : variable_struct
  59                   | variables_struct variable_struct

  60  tipo : INT
  61       | FLOAT32
  62       | CHAR
  63       | '[' CTE_ENTERA ']' tipo
  64       | STRUCT '{' variables_struct '}'
  65       | VOID

  66  definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' lista_variables lista_sentencias '}'

  67  retorno :
  68          | tipo

  69  lista_parametros :
  70                   | lista_parametrosP

  71  lista_parametrosP : ID tipo
  72                    | lista_parametrosP ',' ID tipo

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . FUNC MAIN '(' ')' '{' lista_variables lista_sentencias '}'  (1)
	lista_definiciones : lista_definiciones . definicion  (3)

	FUNC  shift 3
	VAR  shift 4
	.  error

	definicion  goto 5
	definicion_funcion  goto 6
	definicion_variable  goto 7


state 3
	programa : lista_definiciones FUNC . MAIN '(' ')' '{' lista_variables lista_sentencias '}'  (1)
	definicion_funcion : FUNC . ID '(' lista_parametros ')' retorno '{' lista_variables lista_sentencias '}'  (66)

	MAIN  shift 8
	ID  shift 9
	.  error


state 4
	definicion_variable : VAR . identificadores tipo ';'  (54)

	ID  shift 10
	.  error

	identificadores  goto 11


state 5
	lista_definiciones : lista_definiciones definicion .  (3)

	.  reduce 3


state 6
	definicion : definicion_funcion .  (4)

	.  reduce 4


state 7
	definicion : definicion_variable .  (5)

	.  reduce 5


state 8
	programa : lista_definiciones FUNC MAIN . '(' ')' '{' lista_variables lista_sentencias '}'  (1)

	'('  shift 12
	.  error


state 9
	definicion_funcion : FUNC ID . '(' lista_parametros ')' retorno '{' lista_variables lista_sentencias '}'  (66)

	'('  shift 13
	.  error


state 10
	identificadores : ID .  (55)

	.  reduce 55


state 11
	definicion_variable : VAR identificadores . tipo ';'  (54)
	identificadores : identificadores . ',' ID  (56)

	VOID  shift 14
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'['  shift 19
	','  shift 20
	.  error

	tipo  goto 21


state 12
	programa : lista_definiciones FUNC MAIN '(' . ')' '{' lista_variables lista_sentencias '}'  (1)

	')'  shift 22
	.  error


state 13
	definicion_funcion : FUNC ID '(' . lista_parametros ')' retorno '{' lista_variables lista_sentencias '}'  (66)
	lista_parametros : .  (69)

	ID  shift 23
	')'  reduce 69

	lista_parametros  goto 24
	lista_parametrosP  goto 25


state 14
	tipo : VOID .  (65)

	.  reduce 65


state 15
	tipo : STRUCT . '{' variables_struct '}'  (64)

	'{'  shift 26
	.  error


state 16
	tipo : FLOAT32 .  (61)

	.  reduce 61


state 17
	tipo : INT .  (60)

	.  reduce 60


state 18
	tipo : CHAR .  (62)

	.  reduce 62


state 19
	tipo : '[' . CTE_ENTERA ']' tipo  (63)

	CTE_ENTERA  shift 27
	.  error


state 20
	identificadores : identificadores ',' . ID  (56)

	ID  shift 28
	.  error


state 21
	definicion_variable : VAR identificadores tipo . ';'  (54)

	';'  shift 29
	.  error


state 22
	programa : lista_definiciones FUNC MAIN '(' ')' . '{' lista_variables lista_sentencias '}'  (1)

	'{'  shift 30
	.  error


state 23
	lista_parametrosP : ID . tipo  (71)

	VOID  shift 14
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'['  shift 19
	.  error

	tipo  goto 31


state 24
	definicion_funcion : FUNC ID '(' lista_parametros . ')' retorno '{' lista_variables lista_sentencias '}'  (66)

	')'  shift 32
	.  error


state 25
	lista_parametros : lista_parametrosP .  (70)
	lista_parametrosP : lista_parametrosP . ',' ID tipo  (72)

	','  shift 33
	')'  reduce 70


state 26
	tipo : STRUCT '{' . variables_struct '}'  (64)

	ID  shift 10
	.  error

	identificadores  goto 34
	variable_struct  goto 35
	variables_struct  goto 36


state 27
	tipo : '[' CTE_ENTERA . ']' tipo  (63)

	']'  shift 37
	.  error


state 28
	identificadores : identificadores ',' ID .  (56)

	.  reduce 56


state 29
	definicion_variable : VAR identificadores tipo ';' .  (54)

	.  reduce 54


state 30
	programa : lista_definiciones FUNC MAIN '(' ')' '{' . lista_variables lista_sentencias '}'  (1)
	lista_variables : .  (52)

	.  reduce 52

	lista_variables  goto 38


state 31
	lista_parametrosP : ID tipo .  (71)

	.  reduce 71


state 32
	definicion_funcion : FUNC ID '(' lista_parametros ')' . retorno '{' lista_variables lista_sentencias '}'  (66)
	retorno : .  (67)

	VOID  shift 14
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'['  shift 19
	'{'  reduce 67

	tipo  goto 39
	retorno  goto 40


state 33
	lista_parametrosP : lista_parametrosP ',' . ID tipo  (72)

	ID  shift 41
	.  error


state 34
	identificadores : identificadores . ',' ID  (56)
	variable_struct : identificadores . tipo ';'  (57)

	VOID  shift 14
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'['  shift 19
	','  shift 20
	.  error

	tipo  goto 42


state 35
	variables_struct : variable_struct .  (58)

	.  reduce 58


state 36
	variables_struct : variables_struct . variable_struct  (59)
	tipo : STRUCT '{' variables_struct . '}'  (64)

	ID  shift 10
	'}'  shift 43
	.  error

	identificadores  goto 34
	variable_struct  goto 44


state 37
	tipo : '[' CTE_ENTERA ']' . tipo  (63)

	VOID  shift 14
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'['  shift 19
	.  error

	tipo  goto 45


state 38
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_variables . lista_sentencias '}'  (1)
	lista_variables : lista_variables . definicion_variable  (53)
	lista_sentencias : .  (34)

	VAR  shift 4
	CTE_ENTERA  reduce 34
	IF  reduce 34
	CTE_CARACTER  reduce 34
	ID  reduce 34
	ELSE  reduce 34
	WRITE  reduce 34
	VOID  reduce 34
	CTE_REAL  reduce 34
	STRUCT  reduce 34
	WHILE  reduce 34
	FLOAT32  reduce 34
	INT  reduce 34
	RETURN  reduce 34
	CHAR  reduce 34
	READ  reduce 34
	'-'  reduce 34
	'!'  reduce 34
	'['  reduce 34
	'('  reduce 34
	'}'  reduce 34

	lista_sentencias  goto 46
	definicion_variable  goto 47


state 39
	retorno : tipo .  (68)

	.  reduce 68


state 40
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno . '{' lista_variables lista_sentencias '}'  (66)

	'{'  shift 48
	.  error


state 41
	lista_parametrosP : lista_parametrosP ',' ID . tipo  (72)

	VOID  shift 14
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'['  shift 19
	.  error

	tipo  goto 49


state 42
	variable_struct : identificadores tipo . ';'  (57)

	';'  shift 50
	.  error


state 43
	tipo : STRUCT '{' variables_struct '}' .  (64)

	.  reduce 64


state 44
	variables_struct : variables_struct variable_struct .  (59)

	.  reduce 59


state 45
	tipo : '[' CTE_ENTERA ']' tipo .  (63)

	.  reduce 63


state 46
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_variables lista_sentencias . '}'  (1)
	lista_sentencias : lista_sentencias . sentencia  (35)

	CTE_ENTERA  shift 51
	IF  shift 52
	CTE_CARACTER  shift 53
	ID  shift 54
	ELSE  shift 55
	WRITE  shift 56
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	WHILE  shift 58
	FLOAT32  shift 16
	INT  shift 17
	RETURN  shift 59
	CHAR  shift 18
	READ  shift 60
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	'}'  shift 64
	.  error

	expresion  goto 65
	tipo  goto 66
	sentencia  goto 67
	sentencia_if  goto 68
	sentencia_else  goto 69
	sentencia_while  goto 70
	sentencia_write  goto 71
	sentencia_read  goto 72
	sentencia_asignacion  goto 73
	sentencia_return  goto 74
	sentencia_invocacion  goto 75


state 47
	lista_variables : lista_variables definicion_variable .  (53)

	.  reduce 53


state 48
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' . lista_variables lista_sentencias '}'  (66)
	lista_variables : .  (52)

	.  reduce 52

	lista_variables  goto 76


state 49
	lista_parametrosP : lista_parametrosP ',' ID tipo .  (72)

	.  reduce 72


state 50
	variable_struct : identificadores tipo ';' .  (57)

	.  reduce 57


state 51
	expresion : CTE_ENTERA .  (10)

	.  reduce 10


state 52
	sentencia_if : IF . expresion '{' lista_sentencias '}'  (45)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 78
	tipo  goto 66


state 53
	expresion : CTE_CARACTER .  (12)

	.  reduce 12


state 54
	expresion : ID .  (13)
	expresion : ID . '(' lista_expresiones ')'  (33)
	sentencia_invocacion : ID . '(' lista_expresiones ')' ';'  (51)

	'('  shift 79
	DISTINTO  reduce 13
	MENOR_IGUAL  reduce 13
	MAYOR_IGUAL  reduce 13
	IGUAL_IGUAL  reduce 13
	AND  reduce 13
	OR  reduce 13
	'='  reduce 13
	'>'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	'%'  reduce 13
	'['  reduce 13
	'.'  reduce 13


state 55
	sentencia_else : ELSE . '{' lista_sentencias '}'  (46)

	'{'  shift 80
	.  error


state 56
	sentencia_write : WRITE . '(' lista_expresiones ')' ';'  (48)

	'('  shift 81
	.  error


state 57
	expresion : CTE_REAL .  (11)

	.  reduce 11


state 58
	sentencia_while : WHILE . expresion '{' lista_sentencias '}'  (47)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 82
	tipo  goto 66


state 59
	sentencia_return : RETURN . expresion ';'  (50)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 83
	tipo  goto 66


state 60
	sentencia_read : READ . '(' lista_expresiones ')' ';'  (49)

	'('  shift 84
	.  error


state 61
	expresion : '-' . expresion  (17)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 85
	tipo  goto 66


state 62
	expresion : '!' . expresion  (18)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 86
	tipo  goto 66


state 63
	expresion : '(' . expresion ')'  (14)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 87
	tipo  goto 66


state 64
	programa : lista_definiciones FUNC MAIN '(' ')' '{' lista_variables lista_sentencias '}' .  (1)

	.  reduce 1


state 65
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_asignacion : expresion . '=' expresion ';'  (44)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'='  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	.  error


state 66
	expresion : tipo . '(' expresion ')'  (32)

	'('  shift 104
	.  error


state 67
	lista_sentencias : lista_sentencias sentencia .  (35)

	.  reduce 35


state 68
	sentencia : sentencia_if .  (36)

	.  reduce 36


state 69
	sentencia : sentencia_else .  (37)

	.  reduce 37


state 70
	sentencia : sentencia_while .  (38)

	.  reduce 38


state 71
	sentencia : sentencia_write .  (39)

	.  reduce 39


state 72
	sentencia : sentencia_read .  (40)

	.  reduce 40


state 73
	sentencia : sentencia_asignacion .  (41)

	.  reduce 41


state 74
	sentencia : sentencia_return .  (42)

	.  reduce 42


state 75
	sentencia : sentencia_invocacion .  (43)

	.  reduce 43


state 76
	lista_variables : lista_variables . definicion_variable  (53)
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' lista_variables . lista_sentencias '}'  (66)
	lista_sentencias : .  (34)

	VAR  shift 4
	CTE_ENTERA  reduce 34
	IF  reduce 34
	CTE_CARACTER  reduce 34
	ID  reduce 34
	ELSE  reduce 34
	WRITE  reduce 34
	VOID  reduce 34
	CTE_REAL  reduce 34
	STRUCT  reduce 34
	WHILE  reduce 34
	FLOAT32  reduce 34
	INT  reduce 34
	RETURN  reduce 34
	CHAR  reduce 34
	READ  reduce 34
	'-'  reduce 34
	'!'  reduce 34
	'['  reduce 34
	'('  reduce 34
	'}'  reduce 34

	lista_sentencias  goto 105
	definicion_variable  goto 47


state 77
	expresion : ID .  (13)
	expresion : ID . '(' lista_expresiones ')'  (33)

	'('  shift 106
	DISTINTO  reduce 13
	MENOR_IGUAL  reduce 13
	MAYOR_IGUAL  reduce 13
	IGUAL_IGUAL  reduce 13
	AND  reduce 13
	OR  reduce 13
	'='  reduce 13
	'>'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	'%'  reduce 13
	'['  reduce 13
	']'  reduce 13
	'.'  reduce 13
	')'  reduce 13
	'{'  reduce 13
	','  reduce 13
	';'  reduce 13


state 78
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_if : IF expresion . '{' lista_sentencias '}'  (45)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	'{'  shift 107
	.  error


state 79
	expresion : ID '(' . lista_expresiones ')'  (33)
	sentencia_invocacion : ID '(' . lista_expresiones ')' ';'  (51)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	')'  reduce 6

	lista_expresiones  goto 108
	lista_expresionesP  goto 109
	expresion  goto 110
	tipo  goto 66


state 80
	sentencia_else : ELSE '{' . lista_sentencias '}'  (46)
	lista_sentencias : .  (34)

	.  reduce 34

	lista_sentencias  goto 111


state 81
	sentencia_write : WRITE '(' . lista_expresiones ')' ';'  (48)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	')'  reduce 6

	lista_expresiones  goto 112
	lista_expresionesP  goto 109
	expresion  goto 110
	tipo  goto 66


state 82
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_while : WHILE expresion . '{' lista_sentencias '}'  (47)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	'{'  shift 113
	.  error


state 83
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_return : RETURN expresion . ';'  (50)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  shift 114
	.  error


state 84
	sentencia_read : READ '(' . lista_expresiones ')' ';'  (49)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	')'  reduce 6

	lista_expresiones  goto 115
	lista_expresionesP  goto 109
	expresion  goto 110
	tipo  goto 66


state 85
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : '-' expresion .  (17)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	'['  shift 102
	'.'  shift 103
	DISTINTO  reduce 17
	MENOR_IGUAL  reduce 17
	MAYOR_IGUAL  reduce 17
	IGUAL_IGUAL  reduce 17
	AND  reduce 17
	OR  reduce 17
	'='  reduce 17
	'>'  reduce 17
	'<'  reduce 17
	'+'  reduce 17
	'-'  reduce 17
	'*'  reduce 17
	'/'  reduce 17
	'%'  reduce 17
	']'  reduce 17
	')'  reduce 17
	'{'  reduce 17
	','  reduce 17
	';'  reduce 17


state 86
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : '!' expresion .  (18)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	'['  shift 102
	'.'  shift 103
	DISTINTO  reduce 18
	MENOR_IGUAL  reduce 18
	MAYOR_IGUAL  reduce 18
	IGUAL_IGUAL  reduce 18
	AND  reduce 18
	OR  reduce 18
	'='  reduce 18
	'>'  reduce 18
	'<'  reduce 18
	'+'  reduce 18
	'-'  reduce 18
	'*'  reduce 18
	'/'  reduce 18
	'%'  reduce 18
	']'  reduce 18
	')'  reduce 18
	'{'  reduce 18
	','  reduce 18
	';'  reduce 18


state 87
	expresion : '(' expresion . ')'  (14)
	expresion : expresion . '.' expresion  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	')'  shift 116
	.  error


state 88
	expresion : expresion DISTINTO . expresion  (28)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 117
	tipo  goto 66


state 89
	expresion : expresion MENOR_IGUAL . expresion  (27)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 118
	tipo  goto 66


state 90
	expresion : expresion MAYOR_IGUAL . expresion  (25)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 119
	tipo  goto 66


state 91
	expresion : expresion IGUAL_IGUAL . expresion  (29)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 120
	tipo  goto 66


state 92
	expresion : expresion AND . expresion  (30)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 121
	tipo  goto 66


state 93
	expresion : expresion OR . expresion  (31)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 122
	tipo  goto 66


state 94
	sentencia_asignacion : expresion '=' . expresion ';'  (44)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 123
	tipo  goto 66


state 95
	expresion : expresion '>' . expresion  (24)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 124
	tipo  goto 66


state 96
	expresion : expresion '<' . expresion  (26)

	CTE_ENTERA  shift 51
	CTE_CARACTER  shift 53
	ID  shift 77
	VOID  shift 14
	CTE_REAL  shift 57
	STRUCT  shift 15
	FLOAT32  shift 16
	INT  shift 17
	CHAR  shift 18
	'-'  shift 61
	'!'  shift 62
	'['  shift 19
	'('  shift 63
	.  error

	expresion  goto 125
	tipo  goto 66

